fix sidebar text on small screen display

--- a/staticfiles/css/sidebar.css
+++ b/staticfiles/css/sidebar.css
@@ -88,12 +88,4 @@
         width: 80px;
         overflow: hidden;
     }
-
-    body .sidebar .link-text {
-        display: none;
-    }
-
-    body .sidebar .profile-username {
-        display: none;
-    }
 }
